SpringBootImagePipeline code analysis